Feat: implement GUI via JavaFX